Update styling related design

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fnma Auth (Vite + React + Antd)</title>
+    <title>Google Calendar MCP</title>
   </head>
   <body>
     <div id="root"></div>
